fixes scroll issues with trading form on mobile

--- a/packages/augur-simplified/src/modules/App.styles.less
+++ b/packages/augur-simplified/src/modules/App.styles.less
@@ -18,7 +18,7 @@
 }
 
 .ModalShowing {
-  max-height: 100vh;
+  // max-height: 100vh;
   overflow: hidden;
 }
 
