--- a/packages/augur-simplified/src/modules/market/market-view.styles.less
+++ b/packages/augur-simplified/src/modules/market/market-view.styles.less
@@ -380,7 +380,7 @@
   > div {
     height: 100vh;
     overflow: auto;
-    top: -@simple-top-bar-height;
+    top: 0;
   }
 
   @media @breakpoint-tiny {
